Day 5 vertical-align fix

--- a/coffee-shop-exercise/day-05/CoffeeShop/css/main.css
+++ b/coffee-shop-exercise/day-05/CoffeeShop/css/main.css
@@ -113,3 +113,6 @@ html{
     padding-left: 15%;
     width: 60%;
 }
+.section__text-box{
+    vertical-align: top;
+}
